maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:21: error: ';' expected but '=' found.
cotegauche():Boolean={
                    ^