maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    if (cotegauche()==true){
      if (!estFaceMur()){
        avance()
      }else{
        droite()
        if (estFaceMur()){
          droite()
          avance()
        }
        avance()
      }
    }else{
      gauche()
      avance()
    }
  }
}

cotegauche():Boolean={
  gauche()
  if (estFaceMur()){
    droite()
    return true;
  }else{
    droite()
    return false;
  }
}